Bizfi Production/src/objects/Callout_Error__c.object
<CustomObject>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outbound_Message__c</fullName>
        <label>Outbound Message</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Body__c</fullName>
        <label>Response Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <historyRetentionPolicy>
        <archiveAfterMonths>18</archiveAfterMonths>
        <archiveRetentionYears>10</archiveRetentionYears>
        <description>Callout Error History</description>
        <gracePeriodDays>1</gracePeriodDays>
    </historyRetentionPolicy>
    <label>Callout Error</label>
    <nameField>
        <displayFormat>CE-{YYYY}{MM}{DD}{000000}</displayFormat>
        <label>Callout Errors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Callout Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>